# TaskManager

./: .gitignore  Dockerfile  README.md  check_requirements.py  create_test_data.py  docker-compose.yml  manifest.json  pyproject.toml  requirements.txt  run_app.py  run_tests.py  taskmanager.db
app/: __init__.py  database.py  main.py  routers.py  services.py
app/backend/: auth.py  database.py  main.py  models.py  routers.py  services.py
app/frontend/: README.md  index.html  package-lock.json  package.json
app/frontend/src/: App.css  App.tsx  main.tsx
app/frontend/src/api/: client.ts
app/frontend/src/components/: Auth.tsx  FilterBar.tsx  OAuthCallback.tsx  Statistics.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx
app/frontend/src/types/: task.ts
app/scripts/: check_requirements.py  create_test_data.py  run_app.py  run_frontend.py  run_tests.py  test_api.py
taskmanager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
